--- a/YapayZekaProje/model.ipynb
+++ b/YapayZekaProje/model.ipynb
@@ -8666,6 +8666,108 @@
     "\n",
     "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importing the required modules\n",
+    "import numpy as np\n",
+    "from scipy.stats import mode\n",
+    "\n",
+    "def nthroot(a,n):\n",
+    "    return np.power(a,(1/n))\n",
+    "\n",
+    "#Euclidean Distance\n",
+    "def eucledian(p1,p2):\n",
+    "    dist = np.sqrt(np.sum((p1-p2)**2))\n",
+    "    return dist\n",
+    "\n",
+    "def minkowski(p1,p2,k)\n",
+    "    dist = nthroot((p1-p2),k)\n",
+    "    return dist\n",
+    "\n",
+    "def manhattan(p1,p2):\n",
+    "    dist = np.abs(p1-p2)\n",
+    "    return dist\n",
+    "\n",
+    "\n",
+    "#Function to calculate KNN\n",
+    "def predict(x_train, y , x_input, k):\n",
+    "    op_labels = []\n",
+    "     \n",
+    "    #Loop through the Datapoints to be classified\n",
+    "    for item in x_input: \n",
+    "         \n",
+    "        #Array to store distances\n",
+    "        point_dist = []\n",
+    "         \n",
+    "        #Loop through each training Data\n",
+    "        for j in range(len(x_train)): \n",
+    "            distances = manhattan(np.array(x_train[j,:]) , item) \n",
+    "            #Calculating the distance\n",
+    "            point_dist.append(distances) \n",
+    "        point_dist = np.array(point_dist) \n",
+    "         \n",
+    "        #Sorting the array while preserving the index\n",
+    "        #Keeping the first K datapoints\n",
+    "        dist = np.argsort(point_dist)[:k] \n",
+    "         \n",
+    "        #Labels of the K datapoints from above\n",
+    "        labels = y[dist]\n",
+    "         \n",
+    "        #Majority voting\n",
+    "        lab = mode(labels) \n",
+    "        lab = lab.mode[0]\n",
+    "        op_labels.append(lab)\n",
+    " \n",
+    "    return op_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7174657534246576"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test = x[int(0.75*len(x)):]\n",
+    "y_test = y[int(0.75*len(x)):].astype(int)\n",
+    "y_train =  y[:int(0.75*len(x))].astype(int)\n",
+    "x_train = x[:int(0.75*len(x))]\n",
+    "y_pred = predict(x_train, y_train, x_test, 7)\n",
+    "\n",
+    "#Checking the accuracy\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
